2009-08-26  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-sound.c (hildon_play_system_sound):
	Set "module-stream-restore.id" to "x-maemo-system-sound" when
	playing system sounds

	Fixes: NB#133767 (Information and confirmation note sound should
	follow system profile setting)

2009-08-26  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Added more force and increased
	the max speed threshold.

	Fixes: NB#135344 (Pannign needs to be faster)

2009-08-26  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.96, this time for real]

	* NEWS: updates
	* debian/changelog: updates

2009-08-26  Alejandro Pinheiro <apinheiro@igalia.com>

	* hildon/hildon-pannable-area.c
	(hildon_pannable_area_get_topmost): change the computation of the
	co-ordinates transformed when no one of the children is a topmost

	Fixes: NB#133252 (Opening any feed item from RSS always opens the
	first feed item in browser)

2009-08-26  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_remove_timeouts): Adding this new function
	with the code that removes the timeouts of the widget.
	(hildon_pannable_area_dispose),
	(hildon_pannable_area_unrealize): Use the new remove function to
	stop timeouts when unrealizing and disposing.
	(hildon_pannable_area_scroll_to): Added a CLAMP to the position
	calculation to avoid negative values in some cases.

	Fixes: NB#135179 (Remove pannable timeouts in unrealize function)

2009-08-24  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-check-button-example.c: (button_toggled_cb):
	* hildon/hildon-check-button.c: (hildon_check_button_toggled),
	(hildon_check_button_set_active), (hildon_check_button_new),
	(hildon_check_button_clicked), (hildon_check_button_class_init):
	* hildon/hildon-check-button.h:
	* hildon/hildon-set-password-dialog.c: (create_contents),
	(hildon_set_password_response_change), (hildon_checkbox_toggled):
